completed some tasks

--- a/index.html
+++ b/index.html
@@ -8,11 +8,24 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/layout.css">
   <link rel="stylesheet" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600&family=Pacifico&family=Proza+Libre:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
   </header>
   <main>
+    <div class="container">
+      <div class="row center-emoji">
+        <div class="column-half text-align-center">
+          <div class="emoji">
+            <button class="emoji">😁</button>
+          </div>
+          <div class="title">
+            <h1>dad jokes</h1>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
