--- a/index.html
+++ b/index.html
@@ -11,13 +11,20 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600&family=Pacifico&family=Proza+Libre:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
+  <header class="under-line hidden">
+    <div class="container">
+      <div class="row">
+        <div class="column-full text-align-center">
+          <h1>dad jokes</h1>
+        </div>
+      </div>
+    </div>
   </header>
   <main>
     <div class="container">
       <div class="row center-emoji">
         <div class="column-half text-align-center">
-          <div class="emoji">
+          <div class="smiling-emoji">
             <button class="emoji">😁</button>
           </div>
           <div class="title">
