completed some tasks

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
           </div>
         </div>
       </div>
+      <div class="row height justify-align-center">
+        <div class="column-full text-align-center">
+          <div class="dad-joke">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, laborum.</p>
+          </div>
+        </div>
+      </div>
     </div>
   </main>
   <script src="js/data.js"></script>
