--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="css/layout.css">
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600&family=Pacifico&family=Proza+Libre:wght@400;600&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600&family=Pacifico&family=Proza+Libre:wght@400;600&family=Roboto&display=swap"
+    rel="stylesheet">
 </head>
 <body>
   <header class="under-line hidden">
@@ -35,7 +38,7 @@
       <div class="row height justify-align-center">
         <div class="column-full text-align-center">
           <div class="dad-joke">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, laborum.</p>
+            <p></p>
           </div>
         </div>
       </div>
