completed some tasks

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600&family=Pacifico&family=Proza+Libre:wght@400;600&family=Roboto&display=swap"
     rel="stylesheet">
+    <link rel="stylesheet" crossorigin="anonymous"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+      integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==">
 </head>
 <body>
   <header class="under-line hidden">
@@ -35,12 +38,16 @@
           </div>
         </div>
       </div>
-      <div class="row height justify-align-center">
-        <div class="column-full text-align-center">
+    </div>
+    <div class="row height justify-align-center">
+        <div class="row justify-content-align">
+         <i class="fas fa-chevron-left hidden"></i>
+        <div class="column-full column-sixty-percent text-align-center">
           <div class="dad-joke">
             <p></p>
           </div>
         </div>
+          <i class="fas fa-chevron-right hidden"></i>
       </div>
     </div>
   </main>
