--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,14 +9,17 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/layout.css">
   <link rel="stylesheet" href="css/styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600&family=Pacifico&family=Proza+Libre:wght@400;600&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600&family=Pacifico&family=Proza+Libre:wght@400;600&display=swap"
+    rel="stylesheet">
   <link
     href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600&family=Pacifico&family=Proza+Libre:wght@400;600&family=Roboto&display=swap"
     rel="stylesheet">
-    <link rel="stylesheet" crossorigin="anonymous"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
-      integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==">
+  <link rel="stylesheet" crossorigin="anonymous"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+    integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==">
 </head>
+
 <body>
   <header class="under-line hidden">
     <div class="container">
@@ -40,18 +44,17 @@
       </div>
     </div>
     <div class="row height justify-align-center">
-        <div class="row justify-content-align">
-         <i class="fas fa-chevron-left hidden"></i>
+      <div class="row justify-content-align">
         <div class="column-full column-sixty-percent text-align-center">
           <div class="dad-joke">
             <p></p>
           </div>
         </div>
-          <i class="fas fa-chevron-right hidden"></i>
       </div>
     </div>
   </main>
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
 </body>
+
 </html>
