added smiling emoji underneath text

--- a/index.html
+++ b/index.html
@@ -43,12 +43,20 @@
         </div>
       </div>
     </div>
-    <div class="row height justify-align-center">
+    <div class="row height justify-align-center view joke-container hidden">
       <div class="row justify-content-align">
+        <i class="fas fa-chevron-left"></i>
         <div class="column-full column-sixty-percent text-align-center">
           <div class="dad-joke">
             <p></p>
           </div>
+        </div>
+        <i class="fas fa-chevron-right"></i>
+      </div>
+      <div class="row favorite-emoji-position">
+        <div class="column-full">
+          <button class="favorite-emoji">😁</button>
+          <button class="favorite-emoji laughing-emoji-position hidden">😂</button>
         </div>
       </div>
     </div>
