--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="row favorite-emoji-position">
         <div class="column-full">
           <button class="favorite-emoji">😁</button>
-          <button class="favorite-emoji laughing-emoji-position">😂</button>
+          <button class="favorite-emoji laughing-emoji-position hidden">😂</button>
         </div>
       </div>
     </div>
