centered the emoji and fixed up some css and edited html

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
         </div>
         <i class="fas fa-chevron-right"></i>
       </div>
-      <div class="row favorite-emoji-position">
-        <div class="column-full">
-          <button class="favorite-emoji">😁</button>
-          <button class="favorite-emoji laughing-emoji-position hidden">😂</button>
-        </div>
+    </div>
+    <div class="row justify-content-center">
+      <div class="column-half text-align-center">
+        <button class="favorite-emoji smiling hidden">😁</button>
+        <button class="favorite-emoji laughing hidden">😂</button>
       </div>
     </div>
   </main>
