--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
     </div>
     <div class="row height justify-align-center view joke-container hidden">
       <div class="row justify-content-align">
-        <i class="fas fa-chevron-left"></i>
+        <i class="fas fa-chevron-left arrow-left"></i>
         <div class="column-full column-sixty-percent text-align-center">
           <div class="dad-joke">
             <p></p>
           </div>
         </div>
-        <i class="fas fa-chevron-right"></i>
+        <i class="fas fa-chevron-right arrow-right"></i>
       </div>
     </div>
     <div class="row justify-content-center">
