completed hamburger menu

--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
 <body>
   <header class="under-line hidden">
     <div class="container">
-      <div class="row">
+      <div class="row align-center">
         <div class="column-full text-align-center">
           <h1>dad jokes</h1>
+        </div>
+        <div class="hamburger-menu">
+          <a href="#"><i class="fas fa-bars bars"></i></a>
         </div>
       </div>
     </div>
