--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
       </div>
     </div>
   </header>
+  <div class="favorite-menu hidden">
+    <h3><i class="far fa-heart"></i> favorite</h3>
+  </div>
   <main>
     <div class="container">
       <div class="row center-emoji">
