completed hamburger menu functionality

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
           <h1>dad jokes</h1>
         </div>
         <div class="hamburger-menu">
-          <a href="#"><i class="fas fa-bars bars"></i></a>
+          <a href="#" class="hamburger"><i class="fas fa-bars bars"></i></a>
         </div>
       </div>
     </div>
   </header>
   <div class="favorite-menu hidden">
-    <h3><i class="far fa-heart"></i> favorite</h3>
+    <h3><i class="far fa-heart"></i> <a>favorite</a></h3>
   </div>
   <main>
     <div class="container">
