completed favorite dad joke page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" crossorigin="anonymous"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;500&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -34,10 +35,12 @@
     </div>
   </header>
   <div class="favorite-menu hidden">
-    <h3><i class="far fa-heart"></i> <a>favorite</a></h3>
+    <h3><i class="fas fa-heart heart"></i> <a class="favorite">favorite</a></h3>
   </div>
-  <main>
-    <div class="container">
+  <div class="favorite-page hidden">
+  </div>
+  <main class="view">
+    <div class="container view">
       <div class="row center-emoji">
         <div class="column-half text-align-center">
           <div class="smiling-emoji">
