--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="container">
       <div class="row align-center">
         <div class="column-full text-align-center">
-          <h1>dad jokes</h1>
+          <h1><a class="title-design">dad jokes</a></h1>
         </div>
         <div class="hamburger-menu">
           <a href="#" class="hamburger"><i class="fas fa-bars bars"></i></a>
