completed some tasks

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" crossorigin="anonymous"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;500&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -40,6 +40,17 @@
   <div class="favorite-page hidden">
   </div>
   <main class="view">
+    <!-- <div class="row module-container">
+      <div class="module">
+        <div class="inside-module">
+          <p>Are you sure you want to delete this joke?</p>
+          <div class="button-container row justify-content-space-around ">
+            <button class="cancel">cancel</button>
+            <button class="confirm">confirm</button>
+          </div>
+        </div>
+      </div>
+    </div> -->
     <div class="container view">
       <div class="row center-emoji">
         <div class="column-half text-align-center">
