completed delete feature

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <i class="fas fa-chevron-left arrow-left"></i>
         <div class="column-full column-sixty-percent text-align-center">
           <div class="dad-joke">
-            <p></p>
+            <p class="joke"></p>
           </div>
         </div>
         <i class="fas fa-chevron-right arrow-right"></i>
